--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,30 @@
 </head>
 
 <body>
-  <load src="partials/header.html" />
 
+  <header>
+    <load src="partials/header.html" />
+  </header>
+
+  <main>
+    <load src="partials/hero.html" />
+    <load src="partials/advantages.html" />
+    <load src="partials/components.html" />
+    <load src="partials/made.html" />
+    <load src="partials/products.html" />
+    <load src="partials/sellers.html" />
+    <load src="partials/reviews.html" />
+    <load src="partials/subscribe.html" />
+  </main>
+
+  <footer>
+    <load src="partials/footer.html" />
+  </footer>
+
+  <load src="partials/burger-menu.html" />
+  <load src="partials/buy-now.html" />
+  <load src="partials/leave-review.html" />
+  <load src="partials/explore-chocolate.html" />
 
   <script type="module" src="/main.js"></script>
 </body>
