--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <title>Chocolate-team-project</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+  <!-- video player -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/plyr@3.7.8/dist/plyr.min.css" />
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -36,6 +38,9 @@
   <load src="partials/buy-now.html" />
   <load src="partials/leave-review.html" />
   <load src="partials/explore-chocolate.html" />
+
+  <!-- video player -->
+  <script src="https://cdn.jsdelivr.net/npm/plyr@3.7.8/dist/plyr.min.js"></script>
 
   <script type="module" src="/main.js"></script>
 </body>
