--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,13 @@
   <load src="partials/leave-review.html" />
   <load src="partials/explore-chocolate.html" />
 
+  <!-- smooth scrolling (gotop)-->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
   <!-- video player -->
   <script src="https://cdn.jsdelivr.net/npm/plyr@3.7.8/dist/plyr.min.js"></script>
+
   <!-- slider -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script type="module" src="/main.js"></script>
