added id header

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <header>
+  <header id="header">
     <load src="partials/header.html" />
     <load src="partials/burger-menu.html" />
   </header>
